modified file structure.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "main.js",
 	"scripts": {
-		"dev": "parcel src/index.html"
+		"dev": "parcel index.html"
 	},
 	"author": "ahmed reda",
 	"license": "ISC",
