--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"main": "main.js",
 	"scripts": {
 		"dev": "parcel index.html",
+		"build": "parcel build",
 		"predeploy": "npm run build",
 		"deploy": "gh-pages -d build"
 	},
