--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
 	"main": "main.js",
 	"scripts": {
 		"dev": "parcel src/index.html",
-		"build": "parcel build src/index.html",
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d dist"
+		"build": "parcel build src/index.html"
 	},
 	"author": "ahmed reda",
 	"license": "ISC",
